--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,8 @@
 streamlit
 pandas
 numpy
-matplotlib.pyplot
+matplotlib
 seaborn
-plotly.express
-statsmodels.tsa.statespace.sarimax
-statsmodels.stats.diagnostic
-statsmodels.stats.stattools
+plotly
+statsmodels
 chardet
